Добавил учёт  только  дня

--- a/events.yaml
+++ b/events.yaml
@@ -1,7 +1,9 @@
 events:
-  - date: 2024-04-04
+
+#События которые повторяются каждый месяц
+  - date: 0001-01-05
     description: "Событие 1"
-  - date: 2024-05-01
+  - date: 0001-01-09
     description: "Событие 2"
-  - date: 2024-04-04
+  - date: 0001-01-05
     description: "Событие 3"
